simplify API endpoints and use PUT for subscription_update and DELETE for unsubscribe, remove heartbeat, test new endpoints, update openAPI docu
