# foss_public_alert_server/subscriptionHandler/views.py
@@ -60,10 +60,26 @@ def index(request):
 
 def subscribe(request):
     """
-    subscribe to an area on the world to receive push notifications
+    call handler for POST, DELETE or PUT request
     :param request:
-    :return: HttpResponseBadRequest if request was not successful or JsonResponse if the subscription was successful
+    :return:
     """
+    if request.method == "POST":
+        return add_new_subscription(request)
+    elif request.method == 'DELETE':
+        return unsubscribe(request)
+    elif request.method == 'PUT':
+        return update_subscription(request)
+    else:
+        return HttpResponseBadRequest("Invalid HTTP method")
+
+
+def add_new_subscription(request):
+    """
+        subscribe to an area on the world to receive push notifications
+        :param request:
+        :return: HttpResponseBadRequest if request was not successful or JsonResponse if the subscription was successful
+        """
     if request.method != 'POST':
         return HttpResponseBadRequest('wrong HTTP method')
 
@@ -119,7 +135,7 @@ def subscribe(request):
                                                   "",
                                                   "")
             case "FIREBASE":
-                test_push = firebase.send_notification(s.token, json.dumps("successfully subscribed") )
+                test_push = firebase.send_notification(s.token, json.dumps("successfully subscribed"))
 
         if test_push is not None and 200 <= test_push.status_code <= 299:
             s.save()
@@ -127,7 +143,7 @@ def subscribe(request):
             raise PushNotificationCheckFailed("push config is invalid")
 
         # successfully subscribed, return success token and subscription id
-        return JsonResponse({'token': 'successfully subscribed', 'id': s.id})
+        return JsonResponse({'token': 'successfully subscribed', 'subscription_id': s.id})
 
     except PushNotificationCheckFailed as e:
         logger.debug(f"invalid push config: {e}")
@@ -144,13 +160,11 @@ def unsubscribe(request):
     :param request:
     :return:
     """
-    if request.method != 'POST':
+    print(request)
+    if request.method != 'DELETE':
         return HttpResponseBadRequest('wrong HTTP method')
     try:
-        data = loads(request.body)
-        if "subscription_id" not in data:
-            return HttpResponseBadRequest('invalid or missing parameters')
-        subscription_id = data['subscription_id']
+        subscription_id = request.GET.get('subscription_id')
         subscription = Subscription.objects.get(id=subscription_id)
         subscription.delete()
         return HttpResponse("successfully unsubscribed")
@@ -164,53 +178,44 @@ def update_subscription(request):
     :param request: the HTTP request
     :return: HTTP response
     """
-    if request.method != 'POST':
+    print(request)
+    if request.method != 'PUT':
         return HttpResponseBadRequest('wrong HTTP method')
-    data = loads(request.body)
 
     # check parameter of request
-    if 'push_service' not in data or 'subscription_id' not in data:
+    subscription_id = request.GET.get('subscription_id')
+    print(subscription_id)
+    if subscription_id is None:
         return HttpResponseBadRequest('invalid or missing parameters')
-    subscription_id = data['subscription_id']
-    push_service = data['push_service']
 
     # check if subscription is still active
     if not is_active_subscription_update_heartbeat(subscription_id):
         return HttpResponseBadRequest("Subscription has expired. You must register again!")
 
-    # check if push_service is supported
-    if not AppSetting.get(f"SUPPORT_{push_service}") or AppSetting.get(f"SUPPORT_{push_service}") is None:
-        return HttpResponseBadRequest('unsupported push service')
+    # if request contains token, handle update request
+    token = request.GET.get("token")
 
-    # call the push notification handler
-    match push_service:
-        case "UnifiedPush":
-            unified_push.update_subscription(request)
-        case "UnifiedPush_encrypted":
-            unified_push_encrpted.update_subscription(request)
-        case "APN":
-            return apn.update_subscription(request)
-        case "Firebase":
-            return firebase.update_subscription(request)
-        case _:
-            logger.debug("Not supported push service")
-            return HttpResponseBadRequest('something went wrong')
-
-def heartbeat(request):
-    """
-    updates the last heartbeat for the subscription
-    :param request:
-    :return:
-    """
-    if request.method != 'POST':
-        return HttpResponseBadRequest('wrong HTTP method')
-    data = loads(request.body)
-    # check if request contains a subscription id
-    if "subscription_id" not in data:
-        return HttpResponseBadRequest('invalid or missing parameters')
-    subscription_id = data['subscription_id']
-
-    if is_active_subscription_update_heartbeat(subscription_id):
-        return HttpResponse("subscription successfully renewed")
+    if token is None:
+        # if token is none, the request is just to update the subscription
+        return HttpResponse("Subscription successfully updated")
     else:
-        return HttpResponseBadRequest("Subscription has expired. You must register again!")
+        # get selected push service as human-readable label
+        push_service = Subscription.objects.get(id=subscription_id).get_push_service_display()
+
+        # check if push_service is supported
+        if not AppSetting.get(f"SUPPORT_{push_service}") or AppSetting.get(f"SUPPORT_{push_service}") is None:
+            return HttpResponseBadRequest('unsupported push service')
+
+        # call the push notification handler
+        match push_service:
+            case Subscription.PushServices.UNIFIED_PUSH.name:
+                unified_push.update_subscription(request)
+            case Subscription.PushServices.UNIFIED_PUSH_ENCRYPTED.name:
+                unified_push_encrpted.update_subscription(request)
+            case Subscription.PushServices.APN.name:
+                return apn.update_subscription(request)
+            case Subscription.PushServices.FIREBASE.name:
+                return firebase.update_subscription(request)
+            case _:
+                logger.debug("Not supported push service")
+                return HttpResponseBadRequest('something went wrong')
